CKS -Study/CKS-Walk-Thru-001/Sample-Yaml-Code/3-seccomp-runtime.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seccomp-default
  namespace: secdemo
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: nginx
    image: nginx
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
