CKS -Study/CKS-Walk-Thru-001/Sample-Yaml-Code/private-image-test.yaml
# private-image-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-test
  namespace: dev-002
spec:
  containers:
  - name: private-container
    image: chris438/node-k8s-app:latest
  imagePullSecrets:
  - name: regcred
