CKS -Study/CKS-Walk-Thru-001/Sample-Yaml-Code/privileged-pod.yaml
# privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: naughty
spec:
  containers:
    - name: cks
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
