CKS -Study/CKS-Walk-Thru-001/Sample-Yaml-Code/privileged-container-constraint.yaml
# constraints/privileged-container-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedPrivileged
metadata:
  name: disallow-privileged-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
